# Faceless

./: .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  mise.toml  pyproject.toml  requirements.txt  run_faceless.spec
.agents/assets/: README.template.md
.agents/references/ultralytics-docs/: results_engine.md  ultralytics_boxes.md
.agents/references/ultralytics-predict-and-engine-results/2026-04-15/: README.md  REFERENCE_INDEX.md  RESEARCH_SUMMARY.md  SOURCE_URLS.md
.agents/references/ultralytics-predict-and-engine-results/2026-04-15/docs.ultralytics.com/modes/predict/: index.md
.agents/references/ultralytics-predict-and-engine-results/2026-04-15/docs.ultralytics.com/reference/engine/results/: index.md
.github/workflows/: ci.yml  release.yml
faceless/: __init__.py  __main__.py  arcfaces.py  cli.py  config.py  faceless.py  ffprobe.py  insightface.py  run_faceless.py  watermark_text.py  watermarks.py
scripts/: Invoke-Build-Exe.ps1  Invoke-Build.ps1  Label-Faceless.ps1  Reset-Examples.ps1  Set-Environment.ps1
