[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "faceless"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ultralytics",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "build",
    "pyinstaller>=6",
]

[project.scripts]
faceless = "faceless:main"

[tool.setuptools.packages.find]
where = ["."]
