[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faceless"
version = "0.8.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "ultralytics",
    "tqdm",
    "argparse",
    "scikit-image",
    "opencv-python",
]

[project.optional-dependencies]
dev = [
    "build",
    "pip",
    "cibuildwheel",
    "pyinstaller>=6"
]
gpu = [
    # Install with: pip install ".[gpu]" --extra-index-url https://download.pytorch.org/whl/cu128
    "numpy",
    "torch",
    "torchvision",
    "onnxruntime-gpu",
]

[project.scripts]
faceless = "faceless:main"
run_faceless = "faceless:run_faceless"

[tool.setuptools.packages.find]
where = ["."]
include = ["faceless*"]

# [tool.setuptools.package-data]
# faceless = ["labels/*.yaml"]
